[gd_scene load_steps=13 format=2]

[ext_resource path="res://Entity/player_controller.gd" type="Script" id=1]
[ext_resource path="res://Sprites/WingFocused.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Wing.png" type="Texture" id=3]
[ext_resource path="res://Entity/player.gd" type="Script" id=4]
[ext_resource path="res://Audio/skr_damage1.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/skr_grazesound1.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/skr_gameover1.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/skr_loud_basszoom_clock.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "focus",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 1 )

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 14.8477

[node name="player" type="Node2D"]
pause_mode = 2
script = ExtResource( 4 )

[node name="cLeft" type="KinematicBody2D" parent="."]
collision_layer = 2
script = ExtResource( 1 )

[node name="BulletOrigin" type="Position2D" parent="cLeft"]
position = Vector2( 8.93813, -13.2458 )

[node name="BulletOrigin2" type="Position2D" parent="cLeft"]
position = Vector2( -8.14942, -13.2458 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="cLeft"]
frames = SubResource( 1 )
animation = "fly"

[node name="lArea" type="Area2D" parent="cLeft"]
collision_layer = 2
collision_mask = 8204

[node name="cLeft" type="CollisionShape2D" parent="cLeft/lArea"]
position = Vector2( 0, -0.049 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cLeft"]
shape = SubResource( 3 )

[node name="lGrazeArea" type="Area2D" parent="cLeft"]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="cLeft/lGrazeArea"]
shape = SubResource( 4 )

[node name="sfx" type="Node2D" parent="."]

[node name="sfxDamage" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="sfxGraze" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 6 )

[node name="sfxGameover" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 7 )

[node name="sfxBoomer" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 8 )

[node name="AfterdamageTimer" type="Timer" parent="."]
wait_time = 0.35

[node name="PregameoverTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="cLeft/lArea" to="." method="_on_lArea_area_entered"]
[connection signal="area_entered" from="cLeft/lGrazeArea" to="." method="_on_lGrazeArea_area_entered"]
[connection signal="timeout" from="AfterdamageTimer" to="." method="_on_AfterdamageTimer_timeout"]
[connection signal="timeout" from="PregameoverTimer" to="." method="_on_pregameovertimer_timeout"]
